[tool.poetry]
name = "big-o-reminders"
version = "0"
description = "Big-O Reminders"
authors = ["Radon Rosborough <radon@intuitiveexplanations.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
flask = "^3.1.3"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
